k3s/pihole-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: pihole
  name: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pihole
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/pihole_net: "true"
        io.kompose.service: pihole
    spec:
      containers:
        - env:
            - name: DNSMASQ_LISTENING
              value: all
            - name: IPv6
              value: "false"
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: SERVER_IP
              valueFrom:
                configMapKeyRef:
                  key: SERVER_IP
                  name: env
            - name: ServerIP
            - name: TZ
              value: America/Argentina/Buenos_Aires
            - name: WEBPASSWORD
            - name: WEB_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: WEB_PASSWORD
                  name: env
          image: pihole/pihole:latest
          name: pihole
          ports:
            - containerPort: 53
            - containerPort: 53
              protocol: UDP
            - containerPort: 67
              protocol: UDP
            - containerPort: 80
            - containerPort: 443
          resources: {}
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /etc/pihole/
              name: pihole-claim0
            - mountPath: /etc/dnsmasq.d/
              name: pihole-claim1
      restartPolicy: Always
      volumes:
        - name: pihole-claim0
          persistentVolumeClaim:
            claimName: pihole-claim0
        - name: pihole-claim1
          persistentVolumeClaim:
            claimName: pihole-claim1
status: {}
